# mi-detection-cnn-noise-robustness

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_lock.txt
.streamlit/: config.toml
configs/: config.yaml
dashboard/: app.py  mock_data.py
dashboard/components/: charts.py
dashboard/pages/: 01_Signal_Explorer.py  02_Noise_Lab.py  03_Model_Overview.py  04_Training_Results.py  05_Robustness.py  06_Live_Prediction.py  07_Multi_Seed_Analysis.py
dashboard/utils/: download_assets.py
docs/: architecture.md
notebooks/: 01_noise_visualization.ipynb
outputs/reports/: aggregate_comparison.json  aggregate_v1.json  aggregate_v3.json  comparison_v1_vs_v3.json  data_distribution.json  eval_clean.json  eval_clean_tuned.json  eval_clean_v2.json  eval_clean_v3.json  eval_noisy.json  eval_noisy_v3.json  model_architecture.txt  overfitting_comparison_v1_vs_v2.json  threshold_tuning.json  threshold_tuning_v3.json
scripts/: 00_smoke_test.py  01_prepare_data.py  02_train.py  02_train_v3.py  03_evaluate_clean.py  03_evaluate_clean_v3.py  04_generate_noisy.py  05_evaluate_noisy.py  05_evaluate_noisy_v3.py  06_generate_thesis_figures.py  06_tune_threshold.py  06_tune_threshold_v3.py  07_generate_thesis_tables.py  07b_generate_comparison_tables.py  08_export_thesis_numbers.py  08_generate_comparison_figures.py  09_sync_thesis_assets.py  10_run_multi_seed.py  11_aggregate_runs.py  12_aggregate_training_curves.py  compare_v1_v3.py
src/ekg_mi/data/: dataset.py  loader.py  mock_dataset.py  preprocessing.py
src/ekg_mi/noise/: nstdb.py  (+4 more)
tests/: test_noise.py
(+30 files in other folders)
