[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ekg_mi"
version = "0.1.0"
description = "Myocardial infarction detection via 1D CNN with noise-robustness analysis"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
